Fix navbar position to remain fixed on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -111,10 +111,6 @@ body {
     color: #333;
     display: block;
   }
-
-  .nav {
-    position: relative;
-  }
 }
 
 .Banner-section {
